set up the table view for select user VC

--- a/snap1/snap1/Base.lproj/Main.storyboard
+++ b/snap1/snap1/Base.lproj/Main.storyboard
@@ -177,10 +177,10 @@
             </objects>
             <point key="canvasLocation" x="2759.1999999999998" y="126.38680659670166"/>
         </scene>
-        <!--View Controller-->
+        <!--Select User View Controller-->
         <scene sceneID="ohU-ET-LZZ">
             <objects>
-                <viewController id="myZ-Xa-biP" sceneMemberID="viewController">
+                <viewController id="myZ-Xa-biP" customClass="SelectUserViewController" customModule="snap1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ibz-p6-wpE"/>
                         <viewControllerLayoutGuide type="bottom" id="AUi-Ma-JNL"/>
@@ -188,8 +188,23 @@
                     <view key="view" contentMode="scaleToFill" id="TrB-Gl-K4t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4iK-6I-Pnw">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="0.74574593608433926" green="0.9017163212435233" blue="0.054941125703942877" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4iK-6I-Pnw" firstAttribute="top" secondItem="ibz-p6-wpE" secondAttribute="bottom" id="AR8-jB-P1P"/>
+                            <constraint firstItem="4iK-6I-Pnw" firstAttribute="leading" secondItem="TrB-Gl-K4t" secondAttribute="leading" id="GCy-p2-Ht7"/>
+                            <constraint firstItem="AUi-Ma-JNL" firstAttribute="top" secondItem="4iK-6I-Pnw" secondAttribute="bottom" id="f9t-ad-khI"/>
+                            <constraint firstAttribute="trailing" secondItem="4iK-6I-Pnw" secondAttribute="trailing" id="mVB-MO-rJc"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView1" destination="4iK-6I-Pnw" id="1DC-ma-eTw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G03-z5-Mmx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
